:art: Actualiza el nombre de los workflows para incluir el número correspondiente

--- a/.github/workflows/01-hola-mundo.yml
+++ b/.github/workflows/01-hola-mundo.yml
@@ -1,4 +1,4 @@
-name: Mi Primer CI/CD
+name: 01-Mi Primer CI/CD
 description: "Un workflow simple para saludar al mundo y hacer un test matemático."
 
 on:
