--- a/.github/workflows/05-app-python.yml
+++ b/.github/workflows/05-app-python.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Instalar dependencias
       run: |
-        pip install -r requirements.txt
+        pip install -r ./05-app-python/requirements.txt 
 
     - name: Ejecutar tests
       run: |
