:art: Corrige el comando de ejecución con cobertura en el workflow  para usar pytest correctamente

--- a/.github/workflows/05-app-python.yml
+++ b/.github/workflows/05-app-python.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Ejecutar con cobertura
       run: |
-        PYTHONPATH=05-mi-app-python/app.py --cov-report=term --cov-report=html 05-mi-app-python/tests/
+        PYTHONPATH=05-mi-app-python pytest --cov=05-mi-app-python/app.py --cov-report=term --cov-report=html 05-mi-app-python/tests/
 
     - name: Guardar reporte
       uses: actions/upload-artifact@v4
