--- a/.github/workflows/08-docker-en-runner.yml
+++ b/.github/workflows/08-docker-en-runner.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build Docker
-      run: docker build -t mi-app:runner .
+      run: docker build -t mi-app:runner ./06-mi-app-python-docker
 
     - name: Test Docker
       run: |
@@ -22,3 +22,4 @@ jobs:
         sleep 10
         curl -f http://localhost:5000/health
         docker stop app-runner && docker rm app-runner
+
