:art: Corrige un error tipográfico en el paso de prueba del servicio en el workflow de Docker

--- a/.github/workflows/09-app-nodejs-docker.yml
+++ b/.github/workflows/09-app-nodejs-docker.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Probar servicio
       run: |
-        slepp 10
+        sleep 10
         curl -f http://localhost:3000/health
 
     - name: Ver contenedores activos
