:art: Corrige la ruta de la API en la prueba del servicio en el workflow de Docker

--- a/.github/workflows/09-app-nodejs-docker.yml
+++ b/.github/workflows/09-app-nodejs-docker.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Probar servicio
       run: |
         sleep 10
-        curl -f http://localhost:3000/health
+        curl -f http://localhost:3000/api/health
 
     - name: Ver contenedores activos
-      run: docker ps 
+      run: docker ps
