:art: Asegura que la imagen de Docker se empuje correctamente al registro

--- a/.github/workflows/09-app-nodejs-docker.yml
+++ b/.github/workflows/09-app-nodejs-docker.yml
@@ -41,6 +41,7 @@ jobs:
         context: ./07-app-nodejs-docker
         file: ./07-app-nodejs-docker/Dockerfile
         load: true
+        push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
 
