:art: Actualiza el nombre de la imagen para incluir el propietario del repositorio

--- a/.github/workflows/09-app-nodejs-docker.yml
+++ b/.github/workflows/09-app-nodejs-docker.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: app-nodejs
+  IMAGE_NAME: ${{ github.repository_owner }}/app-nodejs
 
 jobs:
   docker-build:
