--- a/07-app-nodejs-docker/package.json
+++ b/07-app-nodejs-docker/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -13,7 +14,9 @@
     "redis": "^3.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "jest": "^30.0.4",
+    "nodemon": "^2.0.12",
+    "supertest": "^7.1.3"
   },
   "engines": {
     "node": ">=22.0.0"
