--- a/.github/workflows/09-app-nodejs-docker.yml
+++ b/.github/workflows/09-app-nodejs-docker.yml
@@ -12,8 +12,26 @@ env:
   IMAGE_NAME: oscarock17/app-nodejs
 
 jobs:
+  run-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Instalar dependencias
+      run: |
+        cd 07-app-nodejs-docker
+        npm install
+
+    - name: Ejecutar tests
+      run: |
+        cd 07-app-nodejs-docker
+        npm test
+
   docker-build:
     runs-on: [self-hosted]
+    needs: run-tests
 
     steps:
     - name: Checkout
