--- a/08-test-ansible-playbook/playbook.yml
+++ b/08-test-ansible-playbook/playbook.yml
@@ -1,15 +1,15 @@
 ---
 - name: Configuración de prueba de Ansible Playbook
   hosts: localhost
-  become: yes
+  become: true
 
   tasks:
     - name: Instalar paquetes esenciales
       apt:
-        name: ["tree"]
+        name:
+          - tree
         state: present
         update_cache: yes
 
     - name: Verificar instalación de tree
-      command: tree --version
-      
+      shell: tree --version
