:art: Modifica el playbook

--- a/08-test-ansible-playbook/playbook.yml
+++ b/08-test-ansible-playbook/playbook.yml
@@ -4,12 +4,17 @@
   become: true
 
   tasks:
-    - name: Instalar paquetes esenciales
-      apt:
-        name:
-          - tree
+    - name: Instalar paquete tree
+      ansible.builtin.apt:
+        name: tree
         state: present
         update_cache: yes
 
     - name: Verificar instalación de tree
-      shell: tree --version
+      ansible.builtin.command: tree --version
+      register: tree_version
+      changed_when: false
+
+    - name: Mostrar versión de tree
+      ansible.builtin.debug:
+        var: tree_version.stdout
