:art: Modifica workflow

--- a/.github/workflows/10-ansible-playbook.yml
+++ b/.github/workflows/10-ansible-playbook.yml
@@ -22,8 +22,7 @@ jobs:
     - name: Run Ansible Lint
       run: |
         echo "Running Ansible Lint"
-        cd 08-test-ansible-playbook
-        ansible-lint playbook.yml
+        ansible-lint 08-test-ansible-playbook/playbook.yml
 
   run-playbook:
     runs-on: self-hosted
