:art: Modifica workflow agregando el directorio

--- a/.github/workflows/10-ansible-playbook.yml
+++ b/.github/workflows/10-ansible-playbook.yml
@@ -18,6 +18,9 @@ jobs:
 
     - name: Setup Ansible Lint
       uses: ansible/ansible-lint@main
+      with:
+        args: playbook.yml
+        working_directory: 08-test-ansible-playbook
 
     - name: Run Ansible Lint
       run: |
