--- a/08-test-ansible-playbook/playbook.yml
+++ b/08-test-ansible-playbook/playbook.yml
@@ -8,7 +8,13 @@
       ansible.builtin.apt:
         name: tree
         state: present
-        update_cache: yes
+        update_cache: true
 
     - name: Verificar instalación de tree
-      shell: tree --version
+      ansible.builtin.command: tree --version
+      register: tree_version
+      changed_when: false
+
+    - name: Mostrar versión de tree
+      ansible.builtin.debug:
+        var: tree_version.stdout
